Fixed font on iOS

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,16 @@
 @font-face {
-  font-family: 'Cthulu';
-  src: local('JMHCthulhumbusArcadeUG-Regular'), url(/public/fonts/JMHCthulhumbusArcade/JMHCthulhumbusArcadeUG-Regular.ttf);
+    font-family: 'Cthulu';
+    src: local('JMHCthulhumbusArcade-Regular'), url('/public/fonts/JMHCthulhumbusArcade/jmh_cthulhumbus_arcade-webfont.eot');
+    src: local('JMHCthulhumbusArcade-Regular'), url('/public/fonts/JMHCthulhumbusArcade/jmh_cthulhumbus_arcade-webfont.eot?#iefix') format('embedded-opentype'),
+         local('JMHCthulhumbusArcade-Regular'), url('../public/fonts/JMHCthulhumbusArcade/jmh_cthulhumbus_arcade-webfont.woff2') format('woff2'),
+         local('JMHCthulhumbusArcade-Regular'), url('../public/fonts/JMHCthulhumbusArcade/jmh_cthulhumbus_arcade-webfont.woff') format('woff'),
+         local('JMHCthulhumbusArcade-Regular'), url('/public/fonts/JMHCthulhumbusArcade/jmh_cthulhumbus_arcade-webfont.ttf') format('truetype'),
+         local('JMHCthulhumbusArcade-Regular'), url('/public/fonts/JMHCthulhumbusArcade/jmh_cthulhumbus_arcade-webfont.svg#jmh_cthulhumbus_arcaderegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
+
 @font-face {
   font-family: 'LightPixel';
   src: local('Light Pixel-7'), url(/public/fonts/LightPixel/light_pixel-7.ttf);
